# jobradar

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jobradar/: __init__.py  client.py  observe.py
tests/: test_core.py  test_observe.py
