[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobradar"
version = "0.1.0"
description = "Observability for scheduled & async jobs — detects silent failures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Maxime Rousseau", email = "mrousseau@glassgen.com" }]
keywords = ["monitoring", "observability", "cron", "jobs", "scheduled-tasks", "async"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.24",
  "typing-extensions>=4.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.0",
  "ruff>=0.4",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/Maxime22440/jobradar"
Repository = "https://github.com/Maxime22440/jobradar"
Issues = "https://github.com/Maxime22440/jobradar/issues"
Changelog = "https://github.com/Maxime22440/jobradar/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/jobradar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=jobradar --cov-report=term-missing"

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
